修正我的页面部分二级页的UI

--- a/app/src/main/res/layout/activity_game_lookback.xml
+++ b/app/src/main/res/layout/activity_game_lookback.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main_bg">
 
     <!--<include layout="@layout/layout_me_title"/>-->
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         android:textColor="@color/white"
-        android:textSize="10dp"
+        android:textSize="8dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:text="温馨提示:本地只记录了您在牌局中的手牌回顾,离开房间后的回顾不会记录"
@@ -33,9 +34,8 @@
         android:id="@+id/vp_lookback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_weight="1"/>
 
     <!-- 按钮区 -->
@@ -79,7 +79,7 @@
             android:gravity="center"
             android:textColor="@color/shop_goldcoin_selected"
             android:textSize="@dimen/game_record_text_medium_size"
-            tools:text="1/7"/>
+            android:text="1/7"/>
 
         <ImageView
             android:id="@+id/nextpage"
