--- a/app/src/main/res/drawable/shop_goldicon_bg.xml
+++ b/app/src/main/res/drawable/shop_goldicon_bg.xml
@@ -2,10 +2,10 @@
 <shape  xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/main_bg_secondary"></solid>
+    <solid android:color="@color/background"></solid>
     <size
-        android:width="70dp"
-        android:height="70dp"></size>
+        android:width="100dp"
+        android:height="100dp"></size>
     <padding
         android:bottom="1dp"
         android:left="2dp"
