--- a/app/src/main/res/layout/activity_game_detail_history.xml
+++ b/app/src/main/res/layout/activity_game_detail_history.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main_bg_secondary">
 
     <!-- 标题栏 -->
     <RelativeLayout
@@ -65,7 +66,7 @@
         <!-- 第一行表头-->
         <TableRow
             android:layout_width="match_parent"
-            android:background="@color/shop_goldcoin_selected"
+            android:background="@color/main_bg"
             android:layout_height="wrap_content">
 
             <TextView
@@ -146,7 +147,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/shop_goldcoin_selected"
+            android:background="@color/main_bg"
             android:layout_marginTop="5dp">
 
             <TextView
@@ -231,7 +232,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:background="@color/shop_goldcoin_selected">
+        android:background="@color/main_bg">
 
         <TextView
             android:id="@+id/tv_room"
@@ -419,7 +420,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:background="@color/shop_goldcoin_selected">
+        android:background="@color/main_bg">
 
         <TextView
             android:layout_width="0.0dp"
@@ -463,18 +464,39 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
+        android:background="@color/main_bg">
+
     <!-- 保险池-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:layout_width="0.0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="2"
             android:textColor="@color/orange"
             android:layout_gravity="center"
@@ -519,7 +541,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_height="1dp"
-        android:background="@color/shop_goldcoin_selected"
+        android:background="@color/gray"
         />
     <!-- 2/7 jackpot-->
     <LinearLayout
@@ -528,7 +550,8 @@
         android:orientation="horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:layout_width="0.0dp"
@@ -573,11 +596,10 @@
     <View
         android:layout_width="match_parent"
         android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_height="1dp"
-        android:background="@color/shop_goldcoin_selected"
+        android:background="@color/gray"
         />
 
     <android.support.v7.widget.RecyclerView
@@ -589,4 +611,5 @@
         android:layout_marginRight="10dp"
         android:padding="10dp"
         />
+    </LinearLayout>
 </LinearLayout>
