--- a/app/src/main/res/layout/activity_game_history.xml
+++ b/app/src/main/res/layout/activity_game_history.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main_bg_secondary">
 
     <!--<include layout="@layout/layout_me_title"/>-->
 
