--- a/app/src/main/res/layout/activity_game_record.xml
+++ b/app/src/main/res/layout/activity_game_record.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main_bg"
     android:orientation="vertical">
 
     <!-- 标题栏 -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dip"
+        android:layout_height="40dp"
         android:visibility="gone"
         android:background="#003366">
 
@@ -87,8 +88,8 @@
 
                 <com.yijian.dzpoker.view.OpenRingProgressView
                     android:id="@+id/open_ring_progress"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp" />
+                    android:layout_width="160dp"
+                    android:layout_height="160dp" />
 
             </LinearLayout>
 
@@ -129,17 +130,17 @@
         android:layout_height="30dp"
         android:text="@string/games_record"
         android:textColor="@color/white"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:textSize="@dimen/game_record_text_medium_size"
         android:gravity="center"
-        android:background="@color/shop_goldcoin_selected"/>
+        android:background="@color/background"/>
 
     <!-- 分类赛事战绩总数-->
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal">
 
         <!-- SNG-->
@@ -149,7 +150,7 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:layout_gravity="center">
 
                 <TextView
@@ -169,7 +170,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
-                    android:paddingTop="10dp"
+                    android:paddingTop="5dp"
                     android:text="SNG"
                     android:textSize="@dimen/game_record_text_medium_size"
                     android:textColor="@color/blue"/>
@@ -182,7 +183,7 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:layout_gravity="center">
 
                 <TextView
@@ -202,7 +203,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
-                    android:paddingTop="10dp"
+                    android:paddingTop="5dp"
                     android:text="MT-SNG"
                     android:textSize="@dimen/game_record_text_medium_size"
                     android:textColor="@color/blue"/>
@@ -216,7 +217,7 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:layout_gravity="center">
 
                 <TextView
@@ -235,7 +236,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:paddingTop="10dp"
+                    android:paddingTop="5dp"
                     android:layout_gravity="center_horizontal"
                     android:text="MTT"
                     android:textSize="@dimen/game_record_text_medium_size"
@@ -250,7 +251,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
 
         <TableRow>
         <!-- 牌局信息-->
@@ -263,7 +264,7 @@
             android:clickable="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginRight="10dp"
-            android:background="@color/shop_goldcoin_selected"
+            android:background="@color/black"
             android:orientation="horizontal">
 
             <ImageView
@@ -295,9 +296,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/rounds_icon"
-                    android:textSize="@dimen/game_record_text_small_size"
+                    android:textSize="10dp"
                     android:text="@string/rounds_link_desc"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/gray"/>
             </LinearLayout>
         </LinearLayout>
 
@@ -309,7 +310,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:clickable="true"
-                android:background="@color/shop_goldcoin_selected"
+                android:background="@color/black"
                 android:layout_gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -342,9 +343,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/rounds_icon"
-                        android:textSize="@dimen/game_record_text_small_size"
+                        android:textSize="10dp"
                         android:text="@string/brands_link_desc"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/gray"/>
                 </LinearLayout>
         </LinearLayout>
 
