--- a/app/src/main/res/layout/item_lookback.xml
+++ b/app/src/main/res/layout/item_lookback.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_margin="10dp">
+        android:layout_margin="3dp">
 
         <TextView
             android:id="@+id/nickName"
@@ -17,7 +17,7 @@
             android:textColor="@color/blue"
             android:layout_alignParentLeft="true"
             tools:text="aaaaaa"
-            android:textSize="@dimen/game_record_text_medium_size"/>
+            android:textSize="@dimen/game_record_text_small_size"/>
 
         <TextView
             android:id="@+id/lastaction"
@@ -26,7 +26,7 @@
             android:textColor="@color/blue"
             android:layout_toRightOf="@+id/nickName"
             tools:text="(aaaaaa)"
-            android:textSize="@dimen/game_record_text_medium_size"/>
+            android:textSize="@dimen/game_record_text_small_size"/>
 
         <TextView
             android:id="@+id/wincard"
@@ -35,7 +35,7 @@
             android:textColor="@color/green"
             android:layout_centerHorizontal="true"
             tools:text="(aaaaaa)"
-            android:textSize="@dimen/game_record_text_medium_size"/>
+            android:textSize="@dimen/game_record_text_small_size"/>
 
         <TextView
             android:id="@+id/winchips"
@@ -44,7 +44,7 @@
             android:textColor="@color/green"
             android:layout_alignParentRight="true"
             tools:text="(aaaaaa)"
-            android:textSize="@dimen/game_record_text_medium_size"/>
+            android:textSize="@dimen/game_record_text_small_size"/>
 
     </RelativeLayout>
 
@@ -52,102 +52,122 @@
     <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         >
 
         <ImageView
             android:id="@+id/headpic"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_height"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_alignParentLeft="true"
             android:src="@drawable/default_male_head"
             tools:src="@drawable/default_male_head"/>
 
         <ImageView
             android:id="@+id/self_card_1"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toRightOf="@+id/headpic"
-            android:visibility="gone"
+            android:visibility="visible"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
             android:src="@drawable/card_bg"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/self_card_2"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toRightOf="@+id/self_card_1"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             android:src="@drawable/card_bg"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/self_card_3"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toRightOf="@+id/self_card_2"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             android:src="@drawable/card_bg"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/self_card_4"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toRightOf="@+id/self_card_3"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             android:src="@drawable/card_bg"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/self_card_5"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toRightOf="@+id/self_card_4"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             android:src="@drawable/card_bg"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/table_card_1"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toLeftOf="@+id/table_card_2"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/table_card_2"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toLeftOf="@+id/table_card_3"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/table_card_3"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toLeftOf="@+id/table_card_4"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/table_card_4"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_toLeftOf="@+id/table_card_5"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             tools:src="@drawable/suit2_2"/>
 
         <ImageView
             android:id="@+id/table_card_5"
-            android:layout_width="@dimen/lookback_card_size"
-            android:layout_height="@dimen/lookback_card_size"
+            android:layout_width="@dimen/lookback_card_size_width"
+            android:layout_height="@dimen/lookback_card_size_height"
             android:layout_alignParentRight="true"
-            android:visibility="gone"
+            android:layout_alignTop="@+id/headpic"
+            android:layout_alignBottom="@+id/headpic"
+            android:visibility="visible"
             tools:src="@drawable/suit2_2"/>
 
     </RelativeLayout>
