--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,12 +20,12 @@
     <dimen name="msg_del_offset">70dp</dimen>
 
     <!-- 文字的大小 -->
-    <dimen name="text_minimum_size">12sp</dimen>
-    <dimen name="text_default_size">12sp</dimen>
-    <dimen name="text_small_size">14sp</dimen>
-    <dimen name="text_normal_size">16sp</dimen>
-    <dimen name="text_medium_size">16sp</dimen>
-    <dimen name="text_large_size">22sp</dimen>
+    <dimen name="text_minimum_size">12dp</dimen>
+    <dimen name="text_default_size">12dp</dimen>
+    <dimen name="text_small_size">14dp</dimen>
+    <dimen name="text_normal_size">16dp</dimen>
+    <dimen name="text_medium_size">16dp</dimen>
+    <dimen name="text_large_size">22dp</dimen>
     <dimen name="default_padding_top">5dp</dimen>
     <dimen name="default_padding_bottom">5dp</dimen>
     <dimen name="default_padding_right">15dp</dimen>
@@ -42,17 +42,17 @@
     <dimen name="nick_name_margin_top">8dp</dimen>
     <dimen name="nick_left">14dp</dimen>
     <dimen name="nick_height">46.67dp</dimen>
-    <dimen name="text_size">12sp</dimen>
-    <dimen name="dark_line_size">3px</dimen>
-    <dimen name="big_text_size">17sp</dimen>
-    <dimen name="send_file_title_size">16sp</dimen>
-    <dimen name="dialog_text_margin_horizontal">15dip</dimen>
-    <dimen name="dialog_padding_vertical">20dip</dimen>
-    <dimen name="normal_text_size">16sp</dimen>
-    <dimen name="very_samll_text_size">9sp</dimen>
-    <dimen name="light_line_size">1px</dimen>
-    <dimen name="custom_dialog_padding_vertical">15dip</dimen>
-    <dimen name="long_image">150dip</dimen>
+    <dimen name="text_size">12dp</dimen>
+    <dimen name="dark_line_size">1dp</dimen>
+    <dimen name="big_text_size">17dp</dimen>
+    <dimen name="send_file_title_size">16dp</dimen>
+    <dimen name="dialog_text_margin_horizontal">15dp</dimen>
+    <dimen name="dialog_padding_vertical">20dp</dimen>
+    <dimen name="normal_text_size">16dp</dimen>
+    <dimen name="very_samll_text_size">9dp</dimen>
+    <dimen name="light_line_size">1dp</dimen>
+    <dimen name="custom_dialog_padding_vertical">15dp</dimen>
+    <dimen name="long_image">150dp</dimen>
 
     <dimen name="indicator_margin">10dp</dimen>
     <dimen name="item_emoticon_size_big">60dp</dimen>
@@ -74,6 +74,7 @@
     <dimen name="game_record_text_medium_size">14dp</dimen>
     <dimen name="game_record_text_small_size">12dp</dimen>
     <dimen name="game_ring_progress_text_column_space">3dp</dimen>
-    <dimen name="lookback_card_size">30dp</dimen>
+    <dimen name="lookback_card_size_width">30dp</dimen>
+    <dimen name="lookback_card_size_height">40dp</dimen>
     <dimen name="lookback_btn_size">15dp</dimen>
 </resources>
